# Linux-software

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  test3.txt
configs/: test.txt  test2.txt  test3.txt
docker/: Dockerfile
scripts/: build.sh  read_com.py  run_in_docker.sh  write_com.py
src/: client_sun_tracking_app.cpp  client_sun_tracking_app.hpp  main.cpp  reflectors_commands_observer.hpp  reflectors_controller.cpp  reflectors_controller.hpp  reflectors_data_observer.hpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  rs485.cpp  rs485.hpp  server_sun_tracking_app.cpp  server_sun_tracking_app.hpp  st_window.cpp  st_window.hpp  standalone_sun_tracking_app.cpp  standalone_sun_tracking_app.hpp  sun_tracking_app.cpp  sun_tracking_app.hpp
src/commands/: load_configuration_command.hpp  reflectors_controller_command.hpp  reflectors_controller_command_visitor.hpp  values_update_command.hpp
src/controller/: arduino_mega.cpp  arduino_mega.hpp  controller_commands_handler.hpp  controller_status.hpp  controller_update_listener.hpp  reflector_state.hpp  reflectors_controller.cpp  reflectors_controller.hpp  reflectors_controller_commands_processor.cpp  reflectors_controller_commands_processor.hpp  reflectors_controller_internal_state.hpp
src/controller/commands/: automatic_move_command.cpp  automatic_move_command.hpp  connect_command.cpp  connect_command.hpp  disconnect_command.cpp  disconnect_command.hpp  flash_command.cpp  flash_command.hpp  go_command.cpp  go_command.hpp  initialization_command.cpp  initialization_command.hpp  load_configuration_command.cpp  load_configuration_command.hpp  manual_move_command.cpp  manual_move_command.hpp  move_command.cpp  move_command.hpp  read_command.cpp  read_command.hpp  reboot_command.cpp  reboot_command.hpp  reflectors_controller_command.cpp  reflectors_controller_command.hpp  reflectors_controller_command_visitor.hpp  request_configuration_command.cpp  request_configuration_command.hpp  set_position_command.cpp  set_position_command.hpp  start_tracking_command.cpp  start_tracking_command.hpp  stop_movement_command.cpp  stop_movement_command.hpp  stop_tracking_command.cpp  stop_tracking_command.hpp  values_update_command.cpp  values_update_command.hpp
src/controller/updates/: ast_update.cpp  ast_update.hpp  bus_connected_update.cpp  bus_connected_update.hpp  bus_disconnected_update.cpp  bus_disconnected_update.hpp  bus_list_update.cpp  bus_list_update.hpp  cp_update.cpp  cp_update.hpp  current_configuration_update.cpp  current_configuration_update.hpp  error_update.cpp  error_update.hpp  reflector_state_update.cpp  reflector_state_update.hpp  reflectors_controller_update.cpp  reflectors_controller_update.hpp  reflectors_controller_update_visitor.hpp  reflectors_size_update.cpp  reflectors_size_update.hpp  status_update.cpp  status_update.hpp
src/controller/utils/: changeable.hpp  communication.cpp  communication.hpp  converters.cpp  converters.hpp  reflector.cpp  reflector.hpp  sun_math.cpp  sun_math.hpp  time.cpp  time.hpp
src/presentation/client/: client.cpp  client.hpp
src/presentation/server/: server.cpp  server.hpp
src/presentation/ui/: renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  st_window.cpp  st_window.hpp
src/presentation/ui/utils/: size.hpp
src/presentation/ui/window_components/: accelerated_tracking_settings_window_component.cpp  accelerated_tracking_settings_window_component.hpp  automatic_sun_tracking_window_component.cpp  automatic_sun_tracking_window_component.hpp  calibration_position_window_component.cpp  calibration_position_window_component.hpp  configuration_window_component.cpp  configuration_window_component.hpp  controller_status_window_component.cpp  controller_status_window_component.hpp  error_window_component.cpp  error_window_component.hpp  manual_reflectors_alignment_window_component.cpp  manual_reflectors_alignment_window_component.hpp  menu_window_component.cpp  menu_window_component.hpp  reflectors_data_window_component.cpp  reflectors_data_window_component.hpp  window_component.hpp
src/utils/: frame_limiter.cpp  frame_limiter.hpp
temp/: main.cpp
